🏓 `smenu`: fix display issue in left align mode

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -1261,6 +1261,8 @@ arr::before {
 .projectInfo {
 	display: flex;
 	flex-direction: column;
+
+	margin-bottom: 120px;
 }
 
 .projectInfo > .header {
